Further updates to avatars images on the battle page (game.html) 	- fixed vertical alignment of power meters 	- changed font and font color on power meters 	- changed color of timer added shadow 	- added shadow to avatars

--- a/app/themes/mortalkombatclassic/style.css
+++ b/app/themes/mortalkombatclassic/style.css
@@ -94,7 +94,9 @@ body {
 
 .gametimer, .gamemessage {
   font-size: 5vw;
-  color: red;
+  /*color: red;*/
+  color: #F15F22;
+  text-shadow: 1px 1px 2px #000;
   font-family: fantasy;
   margin: auto;
   display: inline;
@@ -176,13 +178,6 @@ body {
   margin-top: -150px;
 }
 
-/*.locationtext {
-  width: 100%;
-  color: #F15F22;
-  font-family: "HelveticaNeue-bold", "Helvetica Neue Bold", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-size: 3vw;
-}*/
-
 .ng-scope img {
   width: 100%;
   height: auto;
@@ -207,23 +202,41 @@ body {
   text-align: center;
 }
 
-.healthbar-container {
-  display: inline-block;
+.avatar-health {
+  display: inline-flex;
 }
 
-.avatar-health {
-  display: inline;
+.avatar-health.left.img-left .playername,
+.avatar-health.right.img-right .playername  {
+  position: absolute;
+  color: #F15F22;
+  text-shadow: 1px 1px 2px #000;
+  font-family: "HelveticaNeue-bold", "Helvetica Neue Bold", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+}
+
+.avatar-health.left.img-left .playername {
+  left: 2%;
+}
+
+.avatar-health.right.img-right .playername {
+  right: 2%;
 }
 
 .avatar.thumb {
-  border: 2px solid black;
+  border: 2px solid #F15F22;
   border-radius: 100px;
+  box-shadow: 0px 2px 5px #000;
   overflow: hidden;
-  width: 10%;
+  width: 15%;
 }
 
-.avatar-health img {
+.healthbar-container {
+  display: inline-block;
+  margin: auto;
+}
 
+div#health2 {
+  float: right;
 }
 
 .gifcontainer {
